Updated docs and added endpoints
